gitops/aika/base/v1/backend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aika-backend-app
  name: aika-backend-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aika-backend-app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aika-backend-app
    spec:
      containers:
        - name: aika-backend-app
          image: registry.gitlab.com/ezbaa/aika:placeholder
          imagePullPolicy: Always
          command:
            - sh
            - -c
            - python manage.py migrate --noinput && exec gunicorn config.wsgi:application --bind 0.0.0.0:8000
          resources:
            requests:
              cpu: 15m
              memory: 96Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 8000
              name: web
      imagePullSecrets:
        - name: aika-ips
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
