gitops/aika/base/v1/frontend-application.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: aika-frontend-app
  name: aika-frontend-app
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: aika-frontend-app
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: aika-frontend-app
    spec:
      containers:
        - name: aika-frontend-app
          image: registry.gitlab.com/ezbaa/aika-frontend:placeholder
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 15m
              memory: 96Mi
            limits:
              memory: 256Mi
          ports:
            - containerPort: 80
              name: web
      imagePullSecrets:
        - name: aika-ips
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
