gitops/aika/base/v1/backend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aika-backend-svc
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: aika-backend-app
