gitops/aika/base/v1/frontend-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: aika-frontend-svc
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: aika-frontend-app
