gitops/aika/base/v1/networking-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    kubernetes.io/tls-acme: "true"
  name: aika-ingress
spec:
  rules:
    - host: PLACEHOLDER
      http:
        paths:
          - path: /admin
            pathType: Prefix
            backend:
              service:
                name: aika-backend-svc
                port:
                  number: 8000
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: aika-backend-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aika-frontend-svc
                port:
                  number: 80
  tls:
    - hosts:
        - PLACEHOLDER
      secretName: aika-certificate-1
